network_policy/mongodb_network_policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: app-mongodb
  namespace: acme-air
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: acme-web
