network_policy/web-allow-external.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: acme-air
spec:
  podSelector:
    matchLabels:
      tier: frontend
  ingress:
  - from: []
